# PDF-CLASSIFIER

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: server.py
config/: env.yaml  settings.py
frontend/: app.html
pipeline/: analytics.py  classify.py  extract.py  organize.py  runner.py
utils/: file_utils.py  logger.py  text_utils.py
